# NVRAM_runner

./: CMakeLists.txt  main.cpp
Google_tests/: CMakeLists.txt  answer_test.cpp  call_multithreading_test.cpp  call_test.cpp  function_address_holder_test.cpp  global_storage_test.cpp  install_gtest.sh  persistent_stack_multithreading_test.cpp  queue_test.cpp  test_persistent_stack.cpp  test_utils.cpp  test_utils.h  thread_local_non_owning_storage_test.cpp  thread_local_owning_storage_test.cpp
Google_tests/allocation/: pmem_allocator_test.cpp
Google_tests/blocking_queue/: queue_test.cpp
Google_tests/cas/: cas_internal_test.cpp  cas_test.cpp
Google_tests/common/: pmem_utils_test.cpp  test_utils.cpp  test_utils.h
Google_tests/persistent_stack/: answer_multithreading_test.cpp  answer_test.cpp  call_multithreading_test.cpp  call_test.cpp  persistent_stack_multithreading_test.cpp  test_persistent_stack.cpp
Google_tests/runtime/: answer_multithreading_test.cpp  answer_test.cpp  call_multithreading_test.cpp  call_test.cpp  exec_task_test.cpp  restoration_test.cpp
Google_tests/storage/: global_storage_test.cpp  thread_local_non_owning_storage_test.cpp  thread_local_owning_storage_test.cpp
builds/: build.sh
cas_checking/: cas.py  check.py  check_restricted.py  utils.py
cas_checking/test/: check_restricted_test.py  check_test.py
code/address/: function_address_holder.h  threadlocal_test.cpp  threadlocal_test.h
code/allocation/: pmem_allocator.cpp  pmem_allocator.h
code/blocking_queue/: blocking_queue.h
code/cas/: cas.cpp  cas.h
code/common/: constants_and_types.cpp  constants_and_types.h  pmem_utils.cpp  pmem_utils.h  variant_utils.h
code/debug_utils/: check_all.cpp  check_all.h  queue_check.cpp  queue_check.h  stack_check.cpp  stack_check.h
code/frame/: positioned_frame.cpp  positioned_frame.h  stack_frame.cpp  stack_frame.h
code/globals/: function_address_holder.cpp  function_address_holder.h  global_storage.h  pmem_address_holder.cpp  pmem_address_holder.h  thread_local_non_owning_storage.h  thread_local_owning_storage.h  thread_local_stack_storage.cpp  thread_local_stack_storage.h
code/model/: cur_thread_id_holder.cpp  cur_thread_id_holder.h  function_address_holder.cpp  function_address_holder.h  system_mode.h  tasks.cpp  tasks.h  total_thread_count_holder.cpp  total_thread_count_holder.h
code/persistent_memory/: persistent_memory_holder.cpp
code/persistent_stack/: call.cpp  call.h  frames.cpp  frames.h  persistent_memory_holder.cpp  persistent_memory_holder.h  persistent_stack.cpp  persistent_stack.h  ram_stack.cpp  ram_stack.h  stack_holder.cpp  stack_holder.h
code/runtime/: answer.cpp  answer.h  call.cpp  call.h  exec_task.cpp  exec_task.h  restoration.cpp  restoration.h
code/storage/: global_non_owning_storage.h  global_storage.h  thread_local_non_owning_storage.h  thread_local_owning_storage.h
thesis/sources/: result.tex
